# ggml-alphafold

./: .gitmodules  README.md  pyproject.toml
