[tool.poetry]
name = "ggml-alphafold2"
version = "0.1.0"
description = "Make AlphaFold2 faster"
authors = ["BenTenmann <benji.tenmann@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ggml_alphafold2"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
